fix: fixed spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 .footer {
   display: flex;
   flex: 1;
-  border-top: 1px solid #eaeaea;
+  border-top: 1.5px solid #eaeaea;
   justify-content: center;
   align-items: center;
   color: #CD955C;
@@ -65,7 +65,8 @@
 
 .description {
   margin: 2rem 0;
-  font-size: 2.5rem;
+  line-height: 3.5rem;
+  font-size: 2.33rem;
   color: #CD955C;
   font-family: "NeueMachine-Light";
 }
